--- a/style.css
+++ b/style.css
@@ -141,6 +141,7 @@ main {
   background: -webkit-linear-gradient(to right, #414345, #232526); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   width: 100%;
+  height: 400px;
   margin: 0 auto;
   margin-top: 65px;
   padding: 70px 0;
@@ -157,4 +158,119 @@ main {
 
 #nosotros span {
   font-weight: 500;
+}
+
+/* ------------------------- SERVICIOS ------------------------- */
+
+#servicios {
+  width: 1200px;
+  margin: 0 auto;
+  margin-top: 2rem;
+  padding: 70px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+#servicios img {
+  width: 80px;
+}
+
+#servicios h1 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 30px;
+  font-weight: 800;
+  text-align: center;
+}
+
+#servicios :first-child + p {
+  color: var(--text-black);
+  width: 50%;
+  text-align: center;
+}
+
+.cards-container {
+  margin-top: 20px;
+  display: flex;
+  gap: 20px;
+}
+
+.cards {
+  width: 250px;
+  background: var(--background-white);
+  display: flex;
+  flex-direction: column;
+  justify-content: justify;
+  align-items: center;
+  gap: 10px;
+  padding: 20px 10px;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.cards h3 {
+  font-weight: 600;
+  color: var(--text-black);
+}
+.cards p {
+  width: 90%;
+  font-size: 14px;
+  text-align: center;
+  color: var(--text-grey);
+}
+
+/* ------------------------- FOOTER ------------------------- */
+
+#contacto {
+  background-image: url(./assets/fondo-seccioncontacto.png);
+  background-position: center;
+  background-size: contain;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+.contactanos {
+  width: 700px;
+}
+
+.derecha {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.derecha h2,
+.derecha h3 {
+  font-family: "Montserrat", sans-serif;
+  text-align: center;
+}
+
+.formulario {
+  padding: 20px;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid white;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
+
+.form-enviar {
+  width: fit-content;
 }
